# SlicerAISegmentation

./: .gitignore  CMakeLists.txt  README.md
AISegmentation/: AISegmentation.py  CMakeLists.txt  README.md
AISegmentation/Resources/UI/: AISegmentation.ui
AISegmentation/src/: __init__.py  model.py  util.py
AISegmentationCLI/: AISegmentationCLI.py  AISegmentationCLI.xml  CMakeLists.txt  README.md
AISegmentationCLI/src/: config.py  util.py
